--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -50,7 +50,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">Questionnaire Project</a>
+                        <a class="navbar-brand" href="/">Questionnaire Project</a>
                     </div>
                     <!-- /.navbar-header -->
                 {% endblock %}
@@ -67,7 +67,7 @@
                                     <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
                                     </li>
                                     <li class="divider"></li>
-                                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                                    <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                                     </li>
                                 </ul>
                                 <!-- /.dropdown-user -->
