--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,105 +36,94 @@
 </head>
 
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
 
-{% block wrapper %}
-    <div id="wrapper">
-        <!-- Navigation -->
-        {% block nav %}
-            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-                {% block nav_header %}
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/">Questionnaire Project</a>
-                    </div>
-                    <!-- /.navbar-header -->
-                {% endblock %}
+            {% block wrapper %}
+                <!--<div id="wrapper">
+                     Navigation -->
+                {% block nav %}
+                    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+                        {% block nav_header %}
+                            <div class="navbar-header">
 
-                {% block top_nav %}
-                    <ul class="nav navbar-top-links navbar-right">
-                        <!-- /.dropdown -->
-                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <i class="fa fa-user fa-fw"></i>{{ app.user.username }} <i class="fa fa-caret-down"></i>
-                                </a>
-                                <ul class="dropdown-menu dropdown-user">
-                                    <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                        data-target="#bs-example-navbar-collapse-1">
+                                    <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+                                            class="icon-bar"></span><span class="icon-bar"></span>
+                                </button>
+                                <a class="navbar-brand" href="/">ODI Projet</a>
+                            </div>
+                            <!-- /.navbar-header -->
+                        {% endblock %}
+
+                        {% block top_nav %}
+                            <ul class="nav navbar-top-links navbar-right">
+                                <!-- /.dropdown -->
+                                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                            <i class="fa fa-user fa-fw"></i>{{ app.user.username }} <i
+                                                    class="fa fa-caret-down"></i>
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-user">
+                                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Mon compte</a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Déconnexion</a>
+                                            </li>
+                                        </ul>
                                     </li>
-                                    <li class="divider"></li>
-                                    <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                                {% else %}
+                                    <li>
+                                        <a href="/login"><i class="fa fa-sign-in fa-fw"></i>
+                                            Connexion</a>
                                     </li>
-                                </ul>
-                                <!-- /.dropdown-user -->
-                            </li>
-                        {% endif %}
-                        <!-- /.dropdown -->
-                    </ul>
-                    <!-- /.navbar-top-links -->
-                {% endblock %}
-
-                {% block nav_sidebar %}
-                    <div class="navbar-default sidebar" role="navigation">
-                        <div class="sidebar-nav navbar-collapse">
-                            <ul class="nav" id="side-menu">
-                                <li>
-                                    <a href=""><i class="fa fa-dashboard fa-fw"></i> Surveys</a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-dashboard fa-fw"></i> Questions</a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-dashboard fa-fw"></i> User Settings</a>
-                                </li>
+                                {% endif %}
+                                <!-- /.dropdown -->
                             </ul>
-                        </div>
-                        <!-- /.sidebar-collapse -->
-                    </div>
-                    <!-- /.navbar-static-side -->
+                            <!-- /.navbar-top-links -->
+                        {% endblock %}
+
+                        {% block nav_sidebar %}
+
+                        {% endblock %}
+                    </nav>
                 {% endblock %}
-            </nav>
-        {% endblock %}
 
-        {% block page_content %}
-            <!-- Page Content -->
-            <div id="page-wrapper">
-                <div class="container-fluid">
+                {% block page_content %}
+                    <h3 class="text-center">
+                    {% block page_content_title %}
+                    {% endblock %}
+                    </h3>
                     <div class="row">
-                        <div class="col-lg-12">
-                            {% block content %} {% endblock %}
-                        </div>
-                        <!-- /.col-lg-12 -->
+                        {% block content %} {% endblock %}
                     </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.container-fluid -->
-            </div>
-            <!-- /#page-wrapper -->
-        {% endblock %}
+                {% endblock %}
+                <!--</div>-->
+                <!-- /#wrapper -->
+            {% endblock %}
+
+            {% block javascript %}
+                <!-- jQuery -->
+                <script src="{{ asset('vendor/jquery/jquery.min.js') }}"></script>
+
+                <!-- Bootstrap Core JavaScript -->
+                <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+
+                <!-- Metis Menu Plugin JavaScript -->
+                <script src="{{ asset('vendor/metisMenu/metisMenu.min.js') }}"></script>
+
+                <!-- Custom Theme JavaScript -->
+                <script src="{{ asset('js/sb-admin-2.min.js') }}"></script>
+            {% endblock %}
+
+            {% block custom_js %}{% endblock %}
+
+        </div>
     </div>
-    <!-- /#wrapper -->
-{% endblock %}
-
-{% block javascript %}
-    <!-- jQuery -->
-    <script src="{{ asset('vendor/jquery/jquery.min.js') }}"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
-
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="{{ asset('vendor/metisMenu/metisMenu.min.js') }}"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="{{ asset('js/sb-admin-2.min.js') }}"></script>
-{% endblock %}
-
-{% block custom_js %}{% endblock %}
+</div>
 </body>
 
 </html>
