Update desgin, registration form and confirmation view

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Questionnaire{% endblock %}</title>
 
     {% block stylesheets %}
         <!-- Bootstrap Core CSS -->
@@ -68,7 +68,7 @@
                                                     class="fa fa-caret-down"></i>
                                         </a>
                                         <ul class="dropdown-menu dropdown-user">
-                                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Mon compte</a>
+                                            <li class="disabled"><a href="/userprofile"><i class="fa fa-user fa-fw"></i> Mon compte</a>
                                             </li>
                                             <li class="divider"></li>
                                             <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Déconnexion</a>
