--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,26 +1,36 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        {{ parent() }}
+        - Accueil
+    {% else %}
+        {{ parent() }}
+        - Index
+    {% endif %}
+{% endblock %}
+
 {% block content %}
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
     <div class="col-md-6">
-        <h2>
+        <h2 class="text-center">
             Enquêtes
         </h2>
         <p>
             Description générale
         </p>
-        <button type="button" class="btn btn-lg btn-block btn-info">
+        <button href="/survey" type="button" class="btn btn-lg btn-block btn-info">
             Voir la liste
         </button>
     </div>
     <div class="col-md-6">
-        <h2>
+        <h2 class="text-center">
             Questions
         </h2>
         <p>
             Description générale
         </p>
-        <button type="button" class="btn btn-info btn-block btn-lg">
+        <button href="/questions" type="button" class="btn btn-info btn-block btn-lg">
             Voir la liste
         </button>
     </div>
@@ -33,7 +43,48 @@
                 <p>
                     Vous n'êtes pas connecté. Si vous avez un compte cliquez sur le bouton connexion. Sinon inscrivez-vous!! C'est rapide et gratuit!
                 </p>
-                <p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img alt="Bootstrap Thumbnail First" src="http://lorempixel.com/output/people-q-c-600-200-1.jpg" />
+                            <div class="caption">
+                                <h3>
+                                    Comment trouvez-vous le master ?
+                                </h3>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img alt="Bootstrap Thumbnail Second" src="http://lorempixel.com/output/city-q-c-600-200-1.jpg" />
+                            <div class="caption">
+                                <h3>
+                                    Commment trouvez vous l'option ODI ?
+                                </h3>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img alt="Bootstrap Thumbnail Third" src="http://lorempixel.com/output/sports-q-c-600-200-1.jpg" />
+                            <div class="caption">
+                                <h3>
+                                    Enquête - ODI
+                                </h3>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p class="text-center">
                     <a class="btn btn-primary btn-lg" href="/register">S'inscrire</a>
                 </p>
             </div>
