--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -64,8 +64,7 @@
                                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                            <i class="fa fa-user fa-fw"></i>{{ app.user.username }} <i
-                                                    class="fa fa-caret-down"></i>
+                                            <i class="fa fa-user fa-fw"></i>{{ app.user.username }} <i class="fa fa-caret-down"></i>
                                         </a>
                                         <ul class="dropdown-menu dropdown-user">
                                             <li class="disabled"><a href="/userprofile"><i class="fa fa-user fa-fw"></i> Mon compte</a>
@@ -77,8 +76,7 @@
                                     </li>
                                 {% else %}
                                     <li>
-                                        <a href="/login"><i class="fa fa-sign-in fa-fw"></i>
-                                            Connexion</a>
+                                        <a href="/login"><i class="fa fa-sign-in fa-fw"></i> Connexion</a>
                                     </li>
                                 {% endif %}
                                 <!-- /.dropdown -->
