--- a/app/Resources/views/listeQuestion.html.twig
+++ b/app/Resources/views/listeQuestion.html.twig
@@ -3,13 +3,13 @@
 {% block questionnaire_body %}
 
 <ul class="nav nav-pills nav-stacked">
-    {% for question in listquestion %}
+    {% for question in questions %}
         <li>
             <a href="{{ path('question_view', {'id': question.id}) }}">
                 {{ question.content }}
             </a>
         </li>
-        {{ question.content }}
+        {#{{ question.content }}#}
     {% endfor %}
 </ul>
 
