--- a/app/Resources/views/survey/surveyView.html.twig
+++ b/app/Resources/views/survey/surveyView.html.twig
@@ -6,13 +6,17 @@
     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
         <thead>
             <tr>
-                <th>Respondent</th>
+                <th> Respondent ID</th>
+                <th>Respondent Name</th>
                 <th>Timestamp</th>
             </tr>
         </thead>
         <tbody>
             {% for res in survey.respondents %}
                 <tr>
+                    <td>
+                        {{ res.id }}
+                    </td>
                     <td>
                         <a href="{{ path('survey_single_result', {'id':survey.id, 'respondent_id': res.id}) }}">
                             {{ res.name }}
@@ -25,4 +29,7 @@
             {% endfor %}
         </tbody>
     </table>
+    <div class="form-group">
+        <a href="{{ path('survey_export', {'id': survey.id}) }}"><button type="button" class="btn-primary">Export CSV</button> </a>
+    </div>
 {% endblock %}
