--- a/app/Resources/views/question/listQuestions.html.twig
+++ b/app/Resources/views/question/listQuestions.html.twig
@@ -7,6 +7,7 @@
 {% block content %}
     {{ sg_datatables_render(datatable) }}
     <div class="form-group">
-        <a href="{{ path('question_add') }}"><button type="button" class="btn-primary">Add New</button> </a>
+        <a href="{{ path('question_add') }}" class="btn btn-primary">Ajouter </a>
+        <a href="{{ path('home') }}" class="btn btn-danger">Retour</a>
     </div>
 {% endblock %}
