--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -24,6 +24,14 @@
         </div>
 
         <div class="form-group">
+            {{ form_row ( form.last_name ) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row ( form.firstname ) }}
+        </div>
+
+        <div class="form-group">
             {{ form_row ( form.plainPassword.first ) }}
         </div>
 
