--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -16,27 +16,27 @@
     <div class="col-md-4">
         {{ form_start ( form ) }}
         <div class="form-group">
-            {{ form_row ( form.username ) }}
+            {{ form_row ( form.username , {'attr': {'class': 'form-control'}}) }}
         </div>
 
         <div class="form-group">
-            {{ form_row ( form.email ) }}
+            {{ form_row ( form.email , {'attr': {'class': 'form-control'}} ) }}
         </div>
 
         <div class="form-group">
-            {{ form_row ( form.last_name ) }}
+            {{ form_row ( form.last_name , {'attr': {'class': 'form-control'}}) }}
         </div>
 
         <div class="form-group">
-            {{ form_row ( form.firstname ) }}
+            {{ form_row ( form.firstname , {'attr': {'class': 'form-control'}}) }}
         </div>
 
         <div class="form-group">
-            {{ form_row ( form.plainPassword.first ) }}
+            {{ form_row ( form.plainPassword.first , {'attr': {'class': 'form-control'}} ) }}
         </div>
 
         <div class="form-group">
-            {{ form_row ( form.plainPassword.second ) }}
+            {{ form_row ( form.plainPassword.second , {'attr': {'class': 'form-control'}} ) }}
         </div>
 
         <button type="submit" class="btn btn-lg btn-primary btn-block">
