--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -26,12 +26,12 @@
         {% endif %}
         <form action="{{ path('login') }}" method="post">
             <div class="form-group">
-                <label for="username"> Pseudo: </label>
-                <input type="text" id="username" name="_username" value=" {{ last_username }} "/>
+                <label for="username"> Pseudo </label>
+                <input  class="form-control" type="text" id="username" name="_username" value=" {{ last_username }} "/>
             </div>
             <div class="form-group">
-                <label for="password"> Mot de passe: </label>
-                <input type="password" id="password" name="_password"/>
+                <label for="password"> Mot de passe </label>
+                <input class="form-control" type="password" id="password" name="_password"/>
             </div>
             <div class="checkbox">
                 <label><input type="checkbox" name="remember"> Se souvenir de moi</label>
