updated home page - minor bug fixes

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -37,13 +37,19 @@
     {% else %}
         <div class="col-md-12">
             <div class="jumbotron">
-                <h2>
-                    Bienvenue
+                <h2 class="text-center">
+                    Projet ODI M1 Informatique 2017
                 </h2>
                 <p>
-                    Vous n'êtes pas connecté. Si vous avez un compte cliquez sur le bouton connexion. Sinon inscrivez-vous!! C'est rapide et gratuit!
+                    Bienvenue sur notre application web de gestion de questionnaires. <br>
+                    Cet outil vous permet de créer, gérer et analyser les questionnaires que
+                    vous publiez en ligne.<br>
+                    Si vous avez un compte cliquez sur le bouton connexion.
+                    Sinon inscrivez-vous!!<br>
+                    C'est rapide et gratuit!
                 </p>
-                <div class="row">
+                <img class="img-rounded center-block" src="http://www.bloc.com/images_administrables/bibliotheque/grande/drag-n-survey.jpg" />
+                <!--<div class="row">
                     <div class="col-md-6">
                         <div class="thumbnail">
                             <img alt="Bootstrap Thumbnail First" src="http://lorempixel.com/output/people-q-c-600-200-1.jpg" />
@@ -52,7 +58,7 @@
                                     Comment trouvez-vous le master ?
                                 </h3>
                                 <p>
-                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                    Une question comme une autre
                                 </p>
                             </div>
                         </div>
@@ -65,12 +71,14 @@
                                     Commment trouvez vous l'option ODI ?
                                 </h3>
                                 <p>
-                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                    Très bien!
                                 </p>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
+            </div>
+            <div>
                 <p class="text-center">
                     <a class="btn btn-primary btn-lg" href="{{  path('register') }}">S'inscrire</a>
                 </p>
