--- a/app/Resources/views/question/addQuestion.html.twig
+++ b/app/Resources/views/question/addQuestion.html.twig
@@ -31,7 +31,8 @@
                 <label>Choice</label>
                 <input ng-model="item.value" name="choice[]" class="form-control" />
             </div>
-            <button type="button" ng-click="addfield()" id="add_field_btn" class="btn-default" disabled>Add Choice</button>
+            <button type="button" ng-click="addfield()" id="add_field_btn" class="btn btn-info" disabled> <i class="fa fa-plus"></i>
+                Add Choice</button>
         </div>
 
         <div class="form-group">
