--- a/app/Resources/views/profile/change_password.html.twig
+++ b/app/Resources/views/profile/change_password.html.twig
@@ -14,13 +14,13 @@
         <div class="jumbotron">
             {{ form_start ( form , { 'attr': { 'class': 'fos_user_change_password' } } ) }}
             <p>
-                Mot de passe (actuel): {{ form_widget(form.current_password)  }}
+                Mot de passe (actuel) {{ form_widget(form.current_password , {'attr': {'class': 'form-control'}})  }}
             </p>
             <p>
-                Nouveau mot de passe: {{ form_widget ( form.plainPassword.first ) }}
+                Nouveau mot de passe {{ form_widget ( form.plainPassword.first, {'attr': {'class': 'form-control'}} ) }}
             </p>
             <p>
-                Répéter le nouveau mot de passe: {{ form_widget( form.plainPassword.second ) }}
+                Répéter le nouveau mot de passe {{ form_widget( form.plainPassword.second, {'attr': {'class': 'form-control'}} ) }}
             </p>
             <button type="submit" class="btn btn-lg btn-primary">
                 Enregistrer
