--- a/app/Resources/views/registration/confirmed.html.twig
+++ b/app/Resources/views/registration/confirmed.html.twig
@@ -16,10 +16,10 @@
                 Bravo !
             </h2>
             <p>
-                Vous êtes maintenant inscrit(e). Remplissez dès maintenant nos questionnaires en vous connectant !!
+                Vous êtes maintenant inscrit(e). Créez vos questionnaires ou répondez dès maintenant aux nôtre en vous connectant !!
             </p>
             <p>
-                <a class="btn btn-primary btn-large" href="/login">Se connecter</a>
+                <a class="btn btn-primary btn-large" href="{{ path('login') }}">Se connecter</a>
             </p>
         </div>
     </div>
