--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,7 +67,7 @@
                                             <i class="fa fa-user fa-fw"></i>{{ app.user.username }} <i class="fa fa-caret-down"></i>
                                         </a>
                                         <ul class="dropdown-menu dropdown-user">
-                                            <li><a href="/userprofile"><i class="fa fa-user fa-fw"></i> Mon compte</a>
+                                            <li><a href="{{ path('user_profile_show') }}"><i class="fa fa-user fa-fw"></i> Mon compte</a>
                                             </li>
                                             <!--<li><a href="{{ path('list_questions') }}"><i class="fa fa-user fa-fw"></i> Questions</a>
                                             </li>
