--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -19,7 +19,7 @@
         <p>
             Description générale
         </p>
-        <a href="{{ path('list_surveys') }}" class="btn btn-lg btn-block btn-info">
+        <a href="{{ path('list_surveys') }}" class="btn btn-info btn-block btn-lg">
             Voir la liste des enquêtes
         </a>
     </div>
