Updated registration (Controller / Form) - enable auto-login after registration

--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -14,7 +14,7 @@
     <div class="col-md-4">
     </div>
     <div class="col-md-4">
-        {{ form_start ( form ) }}
+        {{ form_start ( form , {'method': 'post', 'attr': {'class': 'fos_user_registration_register'}} ) }}
         <div class="form-group">
             {{ form_row ( form.username , {'attr': {'class': 'form-control'}}) }}
         </div>
@@ -22,15 +22,17 @@
         <div class="form-group">
             {{ form_row ( form.email , {'attr': {'class': 'form-control'}} ) }}
         </div>
+    {% if form.firstname is defined %}
 
         <div class="form-group">
-            {{ form_row ( form.last_name , {'attr': {'class': 'form-control'}}) }}
+            {{ form_row ( form.lastname , {'attr': {'class': 'form-control'}}) }}
         </div>
-
+    {% endif %}
+    {% if form.firstname is defined %}
         <div class="form-group">
             {{ form_row ( form.firstname , {'attr': {'class': 'form-control'}}) }}
         </div>
-
+    {% endif %}
         <div class="form-group">
             {{ form_row ( form.plainPassword.first , {'attr': {'class': 'form-control'}} ) }}
         </div>
