--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -80,6 +80,9 @@
                                     </li>
                                 {% else %}
                                     <li>
+                                        <a href="{{  path('register') }}">S'inscrire</a>
+                                    </li>
+                                    <li>
                                         <a href="{{ path('login') }}"><i class="fa fa-sign-in fa-fw"></i> Connexion</a>
                                     </li>
                                 {% endif %}
