Updated Icons dropdown menu

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,9 +69,9 @@
                                         <ul class="dropdown-menu dropdown-user">
                                             <li><a href="{{ path('user_profile_show') }}"><i class="fa fa-user fa-fw"></i> Mon compte</a>
                                             </li>
-                                            <li><a href="{{ path('list_questions') }}"><i class="fa fa-user fa-fw"></i> Questions</a>
+                                            <li><a href="{{ path('list_questions') }}"><i class="fa fa-question fa-fw"></i> Questions</a>
                                             </li>
-                                            <li><a href="{{ path('list_surveys') }}"><i class="fa fa-user fa-fw"></i> Surveys</a>
+                                            <li><a href="{{ path('list_surveys') }}"><i class="fa fa-file-text fa-fw"></i> Surveys</a>
                                             </li>
                                             <li class="divider"></li>
                                             <li><a href="{{ path('logout') }}"><i class="fa fa-sign-out fa-fw"></i> Déconnexion</a>
