Removed description - Added image for index page

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -16,8 +16,8 @@
         <h2 class="text-center">
             Enquêtes
         </h2>
-        <p>
-            Description générale
+        <p class="text-center">
+            <img src="http://www.babydsdeli.com/wp-content/uploads/2017/10/survey_8.jpg" class="img-circle" height="420" width="420" />
         </p>
         <a href="{{ path('list_surveys') }}" class="btn btn-info btn-block btn-lg">
             Voir la liste des enquêtes
@@ -27,8 +27,8 @@
         <h2 class="text-center">
             Questions
         </h2>
-        <p>
-            Description générale
+        <p class="text-center">
+            <img src="https://w5coaching.com/wp-content/uploads/2012/08/question_mark_red-580x494.jpg" class="img-circle" height="420" width="420"/>
         </p>
         <a href="{{ path('list_questions') }}" class="btn btn-info btn-block btn-lg">
             Voir les questions
