Button annuler created for edit survey and button retour for show and results in list_surveys

--- a/app/Resources/views/survey/publicView.html.twig
+++ b/app/Resources/views/survey/publicView.html.twig
@@ -38,6 +38,7 @@
     </ol>
     <div class="form-group">
         <input type="submit" class="btn btn-primary" value="Finish">
+        <a href="{{ path('list_surveys') }}" class="btn btn-danger">Retour</a>
     </div>
     {{ form_rest(form) }}
     {{ form_end(form) }}
