--- a/app/Resources/views/survey/surveyView.html.twig
+++ b/app/Resources/views/survey/surveyView.html.twig
@@ -31,5 +31,6 @@
     </table>
     <div class="form-group">
         <a href="{{ path('survey_export', {'id': survey.id}) }}" class="btn btn-primary">Export CSV</a>
+        <a href="{{ path('list_surveys') }}" class="btn btn-danger">Retour</a>
     </div>
 {% endblock %}
