--- a/app/Resources/views/survey/editSurvey.html.twig
+++ b/app/Resources/views/survey/editSurvey.html.twig
@@ -54,4 +54,7 @@
             </a>
         </div>
     </div>
+    <div class="form-group">
+        <a href="{{ path('list_surveys') }}" class="btn btn-warning">Annuler</a>
+    </div>
 {% endblock %}
